--- a/kinect_version/bentv_android/res/values/strings.xml
+++ b/kinect_version/bentv_android/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Bentv</string>
+    <string name="app_name">BenTV</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">This is BenTV - if you can see this, the video player has stopped.  Try Again!</string>
 
 </resources>
