--- a/pebble_version/Android_Pebble_SD/CHANGELOG.txt
+++ b/pebble_version/Android_Pebble_SD/CHANGELOG.txt
@@ -1,6 +1,12 @@
 Android_Pebble_SD CHANGELOG
 ===========================
 
+V1.9   24 Mar 2015
+       Fixed issue with multiple instances of server starting when screen is
+       rotated.
+       Request settings on app start to avoid spurious 0% battery charge warnings.
+       Minor changes to wording of some messages and notifications.
+
 V1.8   22 Mar 2015
        Added fault warning audible alarm to alert user to loss of connection to
        watch or server.
